Beverage and drinks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
         </div>
       </div>
     </div>
-    
+    <div style="height: 30px;">
+
+    </div>
     <toaster-container [toasterconfig]="toasterConfig"></toaster-container>
   </div>
