--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,25 @@
 <div class="text-center">
   <h2>Today drink</h2>
   <hr>
- <div style="position: relative;" >
-    <div class="glass">
-      <div class="glass-empty"></div>
+ <div class="glass-wrapper" >
+    <div class="glass-max">{{user?.drinkAmount}} ml</div>
+    <div class="glass" (click)="drinksOfToday()">
+    </div>
+    <div class="glass-fill" #glassFill (click)="drinksOfToday()">
+      <span *ngIf="currentDrinkAmount>0" style="padding-top: 5px;">
+          {{currentDrinkAmount}} ml
+      </span>
+      
     </div>
  </div>
  <hr>
- <div class="col-sm-12">
-    <a [routerLink]="['/add-drink']" style="width:150px">Add Drink</a>
+ <div class="col-sm-12 text-center" style="padding-bottom: 10px">
+    <a [routerLink]="['/adddrink']" class="btn btn-success" style="width:150px">Add a drink</a>
  </div>
- <div class="col-sm-12">
-    <a routerLink="/profile" style="width:150px">Edit Profile</a>
+ <div class="col-sm-12 text-center" style="padding-bottom: 10px">
+    <a routerLink="/profile" class="btn btn-info" style="width:150px">Profile</a>
+ </div>
+ <div class="col-sm-12 text-center" style="padding-bottom: 10px">
+    <a routerLink="/drinkhistory" class="btn btn-outline-warning" style="width:150px">Activity log</a>
  </div>
 </div>
