--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <h2>Today drink</h2>
+  <h2>Your drinking status</h2>
   <hr>
  <div class="glass-wrapper" >
     <div class="glass-max">{{user?.drinkAmount}} ml</div>
