--- a/src/app/drink-add/drink-add.component.html
+++ b/src/app/drink-add/drink-add.component.html
@@ -1,3 +1,4 @@
+<h4 class="text-center">Add a drink</h4>
 <div class="list-group">
   <div *ngFor="let item of beverages" class="list-group-item " 
     [ngClass]="{'list-group-item-primary':item==beverage}" (click)="setBeverage(item);" >
@@ -38,7 +39,7 @@
 <hr>
 <div class="col-sm-12 text-center" style="padding-bottom: 10px;">
   <button class="button" class="btn btn-success" (click)="addDrink()" style="width:150px"
-  [disabled]="beverage===undefined" >Add Drink</button>
+  [disabled]="!beverage" >Add Drink</button>
 </div>
 <div class="col-sm-12 text-center">
    <a [routerLink]="['/home']"  class="btn btn-secondary" style="width:150px" >Back</a>
