--- a/src/app/drink-history/drink-history.component.html
+++ b/src/app/drink-history/drink-history.component.html
@@ -16,7 +16,7 @@
     </table>
   </div>
 </div>
-<div class="alert alert-info text-center" *ngIf="days==undefined || days.length==0">
+<div class="alert alert-info text-center" *ngIf="!days || days.length==0">
   No records found.
 </div>
 <hr>
