--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,11 +6,11 @@
 }
 .glass{
     position: absolute;
+    left: 0;
+    top: 0;
     width: 160px;
     height: 300px;
     margin: auto;
-    background-image: url('/assets/images/glass-empty.png');
-    background-repeat: no-repeat;
     z-index: 10;
 }
 .glass-fill{
