--- a/src/app/drink-history/drink-history.component.html
+++ b/src/app/drink-history/drink-history.component.html
@@ -1,4 +1,4 @@
-<h4 class="text-center">Your activity</h4>
+<h4 class="text-center">Your drinking history</h4>
 <div class="list-group" *ngIf="days">
   <div *ngFor="let item of days" class="list-group-item " (click)="goToDay(item);" >
     <table border="0" style="width: 100%">
@@ -18,8 +18,4 @@
 </div>
 <div class="alert alert-info text-center" *ngIf="!days || days.length==0">
   No records found.
-</div>
-<hr>
-<div class="col-sm-12 text-center">
-   <a [routerLink]="['/home']"  class="btn btn-secondary" style="width:150px" >Back</a>
 </div>
