drinkstatus as main route

--- a/src/app/drink-add/drink-add.component.html
+++ b/src/app/drink-add/drink-add.component.html
@@ -26,10 +26,10 @@
       </div>
       <div >
         <div class="btn-group" role="group" aria-label="size group" style="width: 100%;">
-          <button type="button" class="btn btn-outline-secondary col-3" (click)="beverage.size=100">100</button>
-          <button type="button" class="btn btn-outline-secondary col-3" (click)="beverage.size=200">200</button>
-          <button type="button" class="btn btn-outline-secondary col-3" (click)="beverage.size=300">300</button>
-          <button type="button" class="btn btn-outline-secondary col-3" (click)="beverage.size=400">400</button>
+          <button type="button" class="btn btn-outline-secondary col-3" (click)="addDrinkQuick(100)">100</button>
+          <button type="button" class="btn btn-outline-secondary col-3" (click)="addDrinkQuick(200)">200</button>
+          <button type="button" class="btn btn-outline-secondary col-3" (click)="addDrinkQuick(300)">300</button>
+          <button type="button" class="btn btn-outline-secondary col-3" (click)="addDrinkQuick(400)">400</button>
       </div>
       </div>
       
