--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,11 @@
       <span>Profile</span>
     </a>
 
+    <a [routerLink]=" ['/adddrink']" class="list-group-item"  >
+      <span class="icon ion-ios-add"></span>
+      <span>Add drink</span> 
+    </a>
+
     <a [routerLink]=" ['/drinkstatus']" class="list-group-item"  >
       <span class="icon ion-ios-location-outline"></span>
       <span>Today status</span> 
