add drink in status page

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,2 +1,18 @@
 <h4 class="text-center">Contact Us</h4>
 <hr>
+<p>
+    You can make a communication with  Drink up app in variety of ways and let your questions and problems be easily shared with us. Daily Water is designed to help individuals set drinking water goals and track the volume of water they are drinking on a daily basis. The app allows for schedule reminders and offers a basic statistical analysis of the amount of what you have consumed over the course of a day, week or month.
+</p>
+
+<div>
+    <span class="text-info">Address :</span>via casal bertone,171, Scala B,00159 RM,Italy
+</div>
+<div>
+    <span class="text-info">Tel:</span>0612345680
+</div>
+<div>
+    <span class="text-info">Fax:</span>0689784125
+</div>
+<div>
+    <span class="text-info">Email:</span>shn.abbaszade@gmail.com
+</div>
