--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h5 class="text-center">Drink Up</h5>
+<h5 class="text-center">Menu</h5>
 <br>
 <div class="list-group row">
     <a [routerLink]=" ['/profile']" class="list-group-item" >
@@ -14,11 +14,6 @@
     <a [routerLink]=" ['/drinkhistory']" class="list-group-item" >
       <span class="icon ion-tshirt-outline"></span>
       <span>Drinking history</span>
-    </a>
-
-    <a [routerLink]=" ['/adddrink']" class="list-group-item"  >
-      <span class="icon ion-ios-add"></span>
-      <span>Add drink</span> 
     </a>
 
     <a [routerLink]=" ['/notification']" class="list-group-item"  >
