log daily drink amount

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div #appContainer >
     <nav class="navbar navbar-dark bg-dark fixed-top" >
-        <a [routerLink]=" ['/home']"  >
+        <a (click)="toggleMenu()" href="javascript:void(0)" >
             <span class="navbar-toggler-icon"></span>
         </a>
     </nav>
